# fmha_native

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/teams/fmha-native-isa-match/: config.md
.claude/teams/fmha-native-isa-match/status/: impl.md  lead.md  research.md
docs/: ARCHITECTURE.md  isa-rewrite-spec.md
docs/superpowers/plans/: 2026-05-29-fmha-native-d64.md  2026-05-30-phase2-fused-kernel.md  2026-06-02-splitk-s40000.md
docs/superpowers/specs/: 2026-05-29-fmha-native-d64-design.md  2026-05-30-phase2-fused-kernel-design.md  2026-06-02-splitk-s40000-design.md
scripts/: common.sh  rocprof_att.yaml  run-benchmark-s40k-gsweep.sh  run-benchmark.sh  run-gates.sh
src/: bench_fmha_fwd.cpp
src/components/: epilog.hpp  k_lds.hpp  pv_gemm.hpp  qk_gemm.hpp  row_max.hpp  softmax.hpp  v_lds.hpp
src/components_ref/: cpu_ref_combine.cpp  cpu_ref_combine.hpp  cpu_ref_epilog.cpp  cpu_ref_epilog.hpp  cpu_ref_k_lds.cpp  cpu_ref_k_lds.hpp  cpu_ref_pv_gemm.cpp  cpu_ref_pv_gemm.hpp  cpu_ref_qk_gemm.cpp  cpu_ref_qk_gemm.hpp  cpu_ref_row_max.cpp  cpu_ref_row_max.hpp  cpu_ref_softmax.cpp  cpu_ref_softmax.hpp  cpu_ref_v_lds.cpp  cpu_ref_v_lds.hpp  ref_epilog.cpp  ref_epilog.hpp  ref_k_lds.cpp  ref_k_lds.hpp  ref_pv_gemm.cpp  ref_pv_gemm.hpp  ref_qk_gemm.cpp  ref_qk_gemm.hpp  ref_row_max.cpp  ref_row_max.hpp  ref_softmax.cpp  ref_softmax.hpp  ref_v_lds.cpp  ref_v_lds.hpp
src/fused/: README.md  kernel.cpp  op_combine.hpp  op_epilog.hpp  op_gemm.hpp  op_lds.hpp  op_softmax.hpp  pipeline.hpp
src/kernel/: fmha_fwd_d64_device.hpp  fmha_fwd_d64_epilog.hpp  fmha_fwd_d64_gemm.hpp  fmha_fwd_d64_kernel.cpp  fmha_fwd_d64_lds.hpp  fmha_fwd_d64_softmax.hpp
src/kernels/: pv_gemm.hpp  v_lds.hpp
src/refs/: ref_epilog.cpp  ref_epilog.hpp  ref_k_lds.cpp  ref_k_lds.hpp  ref_pv_gemm.cpp  ref_pv_gemm.hpp  ref_qk_gemm.cpp  ref_row_max.cpp  ref_softmax.cpp  ref_v_lds.cpp
src/runner/: bf16_utils.hpp  buffers.cpp  buffers.hpp  cpu_ref.cpp  cpu_ref.hpp  fmha_params.hpp  gpu_ref.cpp  gpu_ref.hpp  params.hpp
tests/: test_combine.cpp  test_configs.hpp  test_epilog.cpp  test_fmha_fwd_d64.cpp  test_fmha_gpu_ref.cpp  test_k_lds.cpp  test_params.hpp  test_pv_gemm.cpp  test_qk_gemm.cpp  test_row_max.cpp  test_softmax.cpp  test_split.cpp  test_v_lds.cpp
